--- a/main.bib
+++ b/main.bib
@@ -441,3 +441,28 @@
   url     = {https://en.wikipedia.org/wiki/Chemical_table_file},
   urldate = {2023-05-16}
 } 
+
+@online{manish,
+  author  = {Kumar, Manish},
+  title   = {Mol2 file format explained for beginners (Cheminformatics Part 2)
+             },
+  url     = {https://chemicbook.com/2021/02/20/mol2-file-format-explained-for-beginners-part-2.html
+             },
+  urldate = {2023-05-16}
+} 
+
+@online{mdl_ctfile,
+  author  = {MDL Information Systems, Inc},
+  title   = {CTFile Formats},
+  url     = {http://c4.cabrillo.edu/404/ctfile.pdf},
+  urldate = {2023-05-16}
+} 
+
+https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/introduction
+
+@online{pdb101,
+  author  = {RCSB PDB},
+  title   = {Introduction to PDB Data},
+  url     = {https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/introduction},
+  urldate = {2023-05-16}
+} 
