--- a/main.bib
+++ b/main.bib
@@ -458,11 +458,23 @@
   urldate = {2023-05-16}
 } 
 
-https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/introduction
-
 @online{pdb101,
   author  = {RCSB PDB},
   title   = {Introduction to PDB Data},
   url     = {https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/introduction},
   urldate = {2023-05-16}
 } 
+
+@online{wikipedia_pdbfile,
+  author  = {Wikipedia contributors},
+  title   = {Protein Data Bank (file format)},
+  url     = {https://en.wikipedia.org/wiki/Protein_Data_Bank_(file_format)},
+  urldate = {2023-05-16}
+} 
+
+@online{pqrfile,
+  author  = {Grant, Barry and Yao, Xin-Qiu and Skjaerven, Lars and Ide, Julien},
+  title   = {Write PQR Format Coordinate File},
+  url     = {http://thegrantlab.org/bio3d/reference/write.pqr.html},
+  urldate = {2023-05-16}
+}
