--- a/main.bib
+++ b/main.bib
@@ -431,7 +431,7 @@
   author  = {Belford, Robert},
   title   = {Anatomy of a MOL file},
   url     = {https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/ChemInformatics_(2017)%3A_Chem_4399_5399/2.2%3A_Chemical_Representations_on_Computer%3A_Part_II/2.2.2%3A_Anatomy_of_a_MOL_file},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 
@@ -439,7 +439,7 @@
   author  = {Wikipedia contributors},
   title   = {Chemical table file},
   url     = {https://en.wikipedia.org/wiki/Chemical_table_file},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 @online{manish,
@@ -448,33 +448,56 @@
              },
   url     = {https://chemicbook.com/2021/02/20/mol2-file-format-explained-for-beginners-part-2.html
              },
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 @online{mdl_ctfile,
   author  = {MDL Information Systems, Inc},
   title   = {CTFile Formats},
   url     = {http://c4.cabrillo.edu/404/ctfile.pdf},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 @online{pdb101,
   author  = {RCSB PDB},
   title   = {Introduction to PDB Data},
   url     = {https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/introduction},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 @online{wikipedia_pdbfile,
   author  = {Wikipedia contributors},
   title   = {Protein Data Bank (file format)},
   url     = {https://en.wikipedia.org/wiki/Protein_Data_Bank_(file_format)},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 } 
 
 @online{pqrfile,
   author  = {Grant, Barry and Yao, Xin-Qiu and Skjaerven, Lars and Ide, Julien},
   title   = {Write PQR Format Coordinate File},
   url     = {http://thegrantlab.org/bio3d/reference/write.pqr.html},
-  urldate = {2023-05-16}
+  urldate = {2023-05-17}
 }
+
+@online{apbs_pqrfile,
+  author  = {Baker, Nathan},
+  title   = {PQR molecular structure format},
+  url     = {https://apbs.readthedocs.io/en/latest/formats/pqr.html},
+  urldate = {2023-05-17}
+}
+
+https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
+
+@online{chimera_pqrfile,
+  author  = {UCSF Computer Graphics Laboratory},
+  title   = {Introduction to Protein Data Bank Format},
+  url     = {https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html},
+  urldate = {2023-05-17}
+}
+
+@online{pdb101_hierarchical,
+  author  = {RCSB PDB},
+  title   = {Hierarchical Structure of Proteins},
+  url     = {https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/hierarchical-structure-of-proteins},
+  urldate = {2023-05-17}
+} 
